pushing old code finally

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# =========================
-# Operating System Files
-# =========================
+# Node Modules
+node_modules/
